# Findora

./: .env.example  .gitignore  README.md  pyproject.toml
app/: cache.py  schemas.py
app/agent/: orchestrator.py
app/feeds/: default_feed.py
app/llm/: gemini_guard.py  router.py
app/tools/: image_scraper.py  pinterest_auth.py  price_searcher.py  style_advisor.py  vision_analyser.py
app/ui/: streamlit_app.py
